...

            <Text style={styles.description}>이 여행을 어떻게 부를까요?</Text>
          </View>

          <View style={styles.inputSection}>
            <TextInput
              placeholder="신나는 제주도 여행"
              placeholderTextColor="#8C9BB1"
              value={tripName}
              onChangeText={setTripName}
              style={styles.input}
              autoCapitalize="none"
              autoCorrect={false}
...
